tests/NormalTests/paczka1/small_fuzzy/45303857.err
Error in line 3: u9DXJn S975 61,8
Error in line 12: J7KDOt7t0 707 285,8
